# grpc_bench

./: .dockerignore  .gitignore  .scala-steward.conf  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  analyze.sh  bench.sh  build.sh  clean.sh  collect_stats.sh  example_benchmark.sh  generate_ci.sh  run_single_bench.sh  setup_scenario.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: bug_report.md  build.yml  build1.yml  build2.yml  issue_bench.yml  main.yml  rubocop.yml  shellcheck.yml
analyze/: results_analyze.rb
analyze/lib/: test_result.rb
cpp_asio_grpc_bench/: CMakeLists.txt  Dockerfile  main.cpp
cpp_grpc/: Dockerfile  main.cpp
cpp_grpc_mt_bench/: Dockerfile  main.cpp
cpp_grpc_st/: Dockerfile  main.cpp
cpp_grpc_st_bench/: Dockerfile  main.cpp
crystal_grpc/: Dockerfile
crystal_grpc_bench/: Dockerfile  shard.yml
crystal_grpc_bench/src/: server.cr
csharp_grpc/: Greeter.sln
csharp_grpc_bench/: Dockerfile
csharp_grpc_bench/Greeter/: Greeter.csproj
d_grpc/: Dockerfile  dub.json
d_grpc/source/: server.d  (+1 more)
d_grpc_bench/: Dockerfile  dub.json  dub.selections.json
dart_grpc/: Dockerfile
dart_grpc_bench/: .dockerignore  Dockerfile  pubspec.yaml
dart_grpc_onhold/: Dockerfile  pubspec.yaml
dotnet_grpc/: Greeter.sln
dotnet_grpc_bench/: Dockerfile
elixir_grpc/: Dockerfile  mix.exs
elixir_grpc_bench/: Dockerfile  mix.exs
elixir_grpc_bench_onhold/: Dockerfile
elixir_grpc_onhold/: mix.exs
erlang_grpcbox_bench/: .gitignore  Dockerfile  rebar.config
ghz-tool/: Dockerfile
go_connect_bench/: Dockerfile  go.mod  go.sum
go_grpc/: Dockerfile
go_grpc_bench/: Dockerfile  go.mod
go_vtconnect_bench/: Dockerfile  go.mod
go_vtgrpc_bench/: Dockerfile  go.mod
haskell_grpc/: Dockerfile  Helloworld.hs  Main.hs  default.nix  example.cabal
haskell_grpc_haskell_bench/: .gitignore  Dockerfile  Makefile  cabal.project  grpc-haskell-bench.cabal
haskell_grpc_haskell_bench/app/: Main.hs
haskell_grpc_haskell_bench_onhold/: cabal.project  grpc-haskell-bench.cabal
haskell_mu_bench/: .gitignore  Dockerfile  helloworld.proto  run.sh
haskell_mu_onhold/: haskell-mu-bench.cabal  run.sh
java_aot/: Dockerfile  build.gradle  micronaut-cli.yml
java_aot_bench/: Dockerfile  build.gradle  micronaut-cli.yml
java_armeria_bench/: Dockerfile  build.gradle
java_grpc/: Dockerfile
java_grpc_bench/: Dockerfile
java_grpc_g1gc_bench/: Dockerfile
java_grpc_pgc_bench/: Dockerfile
java_grpc_sgc_bench/: Dockerfile  build.gradle
java_grpc_she_bench/: Dockerfile
java_grpc_zgc_bench/: Dockerfile
java_hotspot_grpc_g1gc_bench/: Dockerfile
java_hotspot_grpc_pgc_bench/: Dockerfile
java_hotspot_grpc_sgc_bench/: Dockerfile  build.gradle
java_hotspot_grpc_she_bench/: Dockerfile
java_hotspot_grpc_zgc_bench/: Dockerfile
java_micronaut/: Dockerfile  build.gradle
java_micronaut_bench/: Dockerfile  build.gradle  gradle.properties  micronaut-cli.yml  settings.gradle
java_micronaut_workstealing_bench/: Dockerfile  build.gradle  micronaut-cli.yml
java_openj9_grpc_gencon_bench/: Dockerfile  populate_scc.sh  tmpqtaoiu4l
java_openj9_grpc_optthruput_bench/: Dockerfile
java_quarkus_bench/: Dockerfile  pom.xml
java_quarkus_native_bench/: Dockerfile
java_vertx_grpc_bench/: Dockerfile  build.gradle  settings.gradle
kotlin_grpc/: Dockerfile  build.gradle.kts
kotlin_grpc_bench/: Dockerfile  build.gradle.kts
lua_grpc/: Dockerfile  greeter_server.lua
lua_grpc_st/: Dockerfile
lua_grpc_st_bench/: Dockerfile
lua_grpc_st_onhold/: conanfile.txt  greeter_service.lua
node_grpc/: Dockerfile  greeter_server.js  package.json
node_grpc_st_bench/: Dockerfile
node_grpcjs_st/: Dockerfile  greeter_server.js  package.json
node_grpcjs_st_bench/: Dockerfile  greeter_server.js  package.json
php_grpc/: .rr.yaml  Dockerfile
php_grpc_bench/: Dockerfile  composer.json
php_grpc_bench_onhold/: worker.php
php_swoole_grpc_bench/: Dockerfile  composer.json  server.php
php_swoole_grpc_onhold/: Dockerfile  server.php
python_async_grpc_bench/: Dockerfile  server.py
python_grpc/: Dockerfile  server.py
python_grpc_bench/: Dockerfile  server.py
r_grpc/: Dockerfile  helloserver.R
ruby_grpc/: Dockerfile  server.rb
ruby_grpc_bench/: Dockerfile  server.rb
rust_gmf_bench/: Cargo.toml  Dockerfile  build.rs
rust_gmf_bench/src/: main.rs
rust_grpcio_bench/: Cargo.toml  Dockerfile  build.rs
rust_grpcio_bench/src/: main.rs
rust_pajamax_bench/: Cargo.toml  Dockerfile  README.md  build.rs
rust_pajamax_bench/src/: helloworld.rs
rust_pajamax_bench_onhold/: Cargo.toml  Dockerfile
rust_thruster/: Cargo.toml  Dockerfile  build.rs
rust_thruster_bench/: Dockerfile
rust_thruster_mt_bench/: Cargo.toml  Dockerfile
rust_thruster_mt_bench/src/: main.rs
rust_thruster_st_bench/: Cargo.toml  Dockerfile
rust_thruster_st_bench/src/: main.rs
rust_tonic/: Cargo.toml  Dockerfile
rust_tonic/src/: main.rs
rust_tonic_mt_bench/: Cargo.toml  Dockerfile  build.rs
rust_tonic_mt_bench/.cargo/: config.toml
rust_tonic_mt_bench/src/: main.rs
rust_tonic_mt_jemalloc_bench/: Dockerfile
rust_tonic_mt_mimalloc_bench/: Dockerfile
rust_tonic_mt_musl_bench/: Dockerfile
rust_tonic_mt_tcmalloc_bench/: Dockerfile
rust_tonic_st/: Dockerfile
rust_tonic_st_bench/: Cargo.toml  Dockerfile
rust_tonic_st_bench/src/: main.rs
rust_tonic_st_jemalloc_bench/: Dockerfile
rust_tonic_st_mimalloc_bench/: Dockerfile
rust_tonic_st_musl_bench/: Dockerfile
rust_tonic_st_tcmalloc_bench/: Dockerfile
rust_wtx_bench/: Cargo.toml  Dockerfile  build.rs  rust-toolchain
rust_wtx_bench/src/: main.rs
scala_akka/: Dockerfile  pom.xml
scala_akka_bench/: Dockerfile  build.sbt  pom.xml  sbt.bat
scala_fs2_bench/: Dockerfile  build.sbt
scala_http4s_bench/: Dockerfile  build.sbt
scala_pekko_bench/: Dockerfile  build.sbt
scala_zio_bench/: .gitignore  Dockerfile  build.sbt
swift_grpc/: Dockerfile  Package.swift
swift_grpc_bench/: .dockerignore  Dockerfile  Package.swift
swift_grpc_st/: Dockerfile
swift_grpc_st_bench/: Dockerfile
(+384 files in other folders)
