cabal-version:      2.4
name:               haskell-mu-bench
version:            0.1.0.0
author:             Akshay Mankar
maintainer:         itsakshaymankar@gmail.com
extra-source-files: helloworld.proto

executable haskell-mu-bench
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -O2
    build-depends:    base ^>=4.14.1.0
                    , mu-grpc-server
                    , mu-optics
                    , mu-protobuf
                    , mu-rpc
                    , mu-schema
