[package]
name = "rust_gmf"
version = "0.1.0"
authors = ["Mohsen Zainalpour <zainalpour@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
jemallocator = "0.5.0"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.28", features = ["rt", "macros", "io-util"] }
gmf = "0.1.3"
glommio = "0.8.0"
hyper = { version = "0.14.20", features = ["server", "http1", "http2"] ,optional=true}
ctrlc-async = "3.2.2"

[build-dependencies]
tonic-build = "0.9"

[[bin]]
name = "helloworld-server"
path = "src/main.rs"
