[package]
name = "rust_grpcio"
version = "0.1.0"
authors = ["Trisfald <trisfald@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
jemallocator = "0.5.0"
grpcio = "0.10.3"
protobuf = "2.27.1"
futures = "0.3.24"

[build-dependencies]
protoc-grpcio = "3.0"

[[bin]]
name = "helloworld-server"
path = "src/main.rs"
