[package]
name = "rust_grpcio"
version = "0.1.0"
authors = ["Trisfald <trisfald@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
jemallocator = "0.5.0"
grpcio = "0.12"
protobuf = "3"
futures = "0.3"

[build-dependencies]
protoc-grpcio = "3"

[[bin]]
name = "helloworld-server"
path = "src/main.rs"
