[package]
name = "rust_pajamax"
version = "0.1.0"
authors = ["Wu Bingzheng <wubingzheng@gmail.com>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "helloworld"
path = "src/helloworld.rs"

[dependencies]
pajamax = "0.1.1"
prost = "0.13.5"

[build-dependencies]
pajamax-build = "0.1.0"
prost-build = "0.13.5"
