[package]
name = "rust_tonic"
version = "0.1.0"
authors = ["Hubert Bugaj <hubert.bugaj@nexthink.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.2"
prost = "0.6.1"
tokio = { version = "0.2", features = ["macros", "tcp", "dns", "io-util"] }

[build-dependencies]
tonic-build = "0.2"

[[bin]]
name = "helloworld-server"
path = "src/main.rs"
