[package]
name = "rust_tonic"
version = "0.1.0"
authors = ["LesnyRumcajs <lesny.rumcajs+github@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.4", features = ["parking_lot", "rt-multi-thread", "macros", "io-util"] }

[build-dependencies]
tonic-build = "0.4"

[[bin]]
name = "helloworld-server"
path = "src/main.rs"
