[package]
name = "rust_tonic"
version = "0.1.0"
authors = ["LesnyRumcajs <lesny.rumcajs+github@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
jemallocator = "0.5.0"
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.17", features = ["parking_lot", "rt-multi-thread", "macros", "io-util"] }

[build-dependencies]
tonic-build = "0.7"

[[bin]]
name = "helloworld-server"
path = "src/main.rs"
