[package]
name = "rust_tonic"
version = "0.1.0"
authors = ["LesnyRumcajs <lesny.rumcajs+github@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
tikv-jemallocator = "0.6"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1.52", features = ["parking_lot", "rt-multi-thread"] }

[build-dependencies]
tonic-prost-build = "0.14"

[[bin]]
name = "helloworld-server"
path = "src/main.rs"
