[package]
name = "rust_tonic"
version = "0.1.0"
authors = ["LesnyRumcajs <lesny.rumcajs+github@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
jemallocator = "0.5.0"
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.36", features = ["rt", "macros", "io-util"] }

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "helloworld-server"
path = "src/main.rs"
